add self link
