# gamification-impl/src/main/resources/api-spec.yaml
@@ -281,6 +281,10 @@ components:
           type: string
         description:
           type: string
+        links:
+          type: array
+          items:
+            $ref: '#/components/schemas/Link'
     Badge:
       type: object
       properties:
@@ -292,6 +296,10 @@ components:
         imageUrl:
           type: string
           nullable: true
+        links:
+          type: array
+          items:
+            $ref: '#/components/schemas/Link'
     Event:
       type: object
       properties:
@@ -348,3 +356,9 @@ components:
         value:
           type: string
           format: uuid
+    Link:
+      type: object
+      properties:
+        self:
+          type: string
+          format: uri
